Revert DocumentValidationTests