@@ -3,8 +3,10 @@ package uk.gov.hmcts.reform.finrem.functional.documents;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import io.restassured.path.json.JsonPath;
 import io.restassured.response.Response;
 import lombok.extern.slf4j.Slf4j;
+import net.serenitybdd.rest.SerenityRest;
 import org.junit.Test;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
@@ -26,7 +28,6 @@ import java.util.Map;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNull;
-import static org.mockito.Mockito.mock;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.AMENDED_CONSENT_ORDER_COLLECTION;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.CONSENT_ORDER;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.PENSION_DOCS_COLLECTION;
@@ -37,10 +38,13 @@ public class DocumentValidationTests extends IntegrationTestBase {
 
     private static final String RESPOND_TO_ORDER_SOLICITOR_JSON = "respond-to-order-solicitor.json";
     private static final String CONSENT_ORDER_JSON = "draft-consent-order.json";
-    private static final String CONSENTED_DIR = "/json/latestConsentedConsentOrder/";
+    private static final String consentedDir = "/json/latestConsentedConsentOrder/";
 
     private ObjectMapper objectMapper = new ObjectMapper();
     private CallbackRequest callbackRequest;
+
+    @Value("${cos.document.miniform.api}")
+    private String generatorUrl;
 
     @Value("${cos.consentOrder.document.validation.api}")
     private String consentOrderFileCheckUrl;
@@ -57,7 +61,7 @@ public class DocumentValidationTests extends IntegrationTestBase {
     private void setUpCaseDetails(String fileName) throws IOException {
         objectMapper.registerModule(new JavaTimeModule());
         try (InputStream resourceAsStream =
-                 getClass().getResourceAsStream(CONSENTED_DIR + fileName)) {
+                 getClass().getResourceAsStream(consentedDir + fileName)) {
             callbackRequest = objectMapper.readValue(resourceAsStream, CallbackRequest.class);
         }
     }
@@ -67,7 +71,7 @@ public class DocumentValidationTests extends IntegrationTestBase {
         setUpCaseDetails(CONSENT_ORDER_JSON);
         CaseDetails caseDetails = callbackRequest.getCaseDetails();
         Map<String, Object> data = caseDetails.getData();
-        data.put(CONSENT_ORDER, generateCaseDocument());
+        data.put(CONSENT_ORDER, generateCaseDocument(CONSENT_ORDER_JSON));
         caseDetails.setData(data);
         callbackRequest.setCaseDetails(caseDetails);
         // call fileupload endpoint and assert
@@ -75,7 +79,7 @@ public class DocumentValidationTests extends IntegrationTestBase {
         HttpStatus responseHttpStatus = HttpStatus.valueOf(response.getStatusCode());
 
         assertEquals(HttpStatus.OK, responseHttpStatus);
-        verifyResponseHavingNullErrors(response);
+        assertNull(response.jsonPath().get("errors"));
     }
 
     @Test
@@ -87,7 +91,7 @@ public class DocumentValidationTests extends IntegrationTestBase {
         HttpStatus responseHttpStatus = HttpStatus.valueOf(response.getStatusCode());
 
         assertEquals(HttpStatus.OK, responseHttpStatus);
-        verifyResponseHavingNullErrors(response);
+        assertNull(response.jsonPath().get("errors"));
     }
 
     @Test
@@ -99,7 +103,7 @@ public class DocumentValidationTests extends IntegrationTestBase {
         HttpStatus responseHttpStatus = HttpStatus.valueOf(response.getStatusCode());
 
         assertEquals(HttpStatus.OK, responseHttpStatus);
-        verifyResponseHavingNullErrors(response);
+        assertNull(response.jsonPath().get("errors"));
     }
 
     @Test
@@ -114,8 +118,35 @@ public class DocumentValidationTests extends IntegrationTestBase {
         assertNull(response.jsonPath().get("errors"));
     }
 
-    private CaseDocument generateCaseDocument() {
-        return mock(CaseDocument.class);
+    private CaseDocument generateCaseDocument(String fileName) {
+        // generate pdf document to set it as consent order
+        JsonPath jsonPathEvaluator = generateDocument(fileName, generatorUrl, consentedDir);
+
+        return getCaseDocument(jsonPathEvaluator);
+    }
+
+    private io.restassured.path.json.JsonPath generateDocument(String jsonFileName, String url, String journeyType) {
+        Response jsonResponse = SerenityRest.given()
+            .relaxedHTTPSValidation()
+            .headers(utils.getHeaders())
+            .body(utils.getJsonFromFile(jsonFileName, journeyType))
+            .when().post(url).andReturn();
+
+        HttpStatus responseHttpStatus = HttpStatus.valueOf(jsonResponse.getStatusCode());
+        assertEquals(HttpStatus.OK, responseHttpStatus);
+
+        return jsonResponse.jsonPath();
+    }
+
+    private CaseDocument getCaseDocument(JsonPath jsonPathEvaluator) {
+        Object object = jsonPathEvaluator.get("data.miniFormA");
+        return convertToCaseDocument(object);
+    }
+
+    private CaseDocument convertToCaseDocument(Object object) {
+        objectMapper = new ObjectMapper();
+        objectMapper.registerModule(new JavaTimeModule());
+        return objectMapper.convertValue(object, CaseDocument.class);
     }
 
     private List<RespondToOrderData> convertToRespondToOrderDataList(Object object) {
@@ -132,8 +163,8 @@ public class DocumentValidationTests extends IntegrationTestBase {
         Map<String, Object> data = caseDetails.getData();
         Object pensionObject = data.get(PENSION_DOCS_COLLECTION);
         List<PensionTypeCollection> respondToOrderData = convertToPensionCollectionDataList(pensionObject);
-        PensionType typedCaseDocument = respondToOrderData.getFirst().getTypedCaseDocument();
-        typedCaseDocument.setPensionDocument(generateCaseDocument());
+        PensionType typedCaseDocument = respondToOrderData.get(0).getTypedCaseDocument();
+        typedCaseDocument.setPensionDocument(generateCaseDocument(CONSENT_ORDER_JSON));
         data.put(PENSION_DOCS_COLLECTION, respondToOrderData);
         caseDetails.setData(data);
         callbackRequest.setCaseDetails(caseDetails);
@@ -144,8 +175,8 @@ public class DocumentValidationTests extends IntegrationTestBase {
         Map<String, Object> data = caseDetails.getData();
         Object respondToOrderDocumentsObject = data.get(RESPOND_TO_ORDER_DOCUMENTS);
         List<RespondToOrderData> respondToOrderData = convertToRespondToOrderDataList(respondToOrderDocumentsObject);
-        RespondToOrder respondToOrder = respondToOrderData.getFirst().getRespondToOrder();
-        respondToOrder.setDocumentLink(generateCaseDocument());
+        RespondToOrder respondToOrder = respondToOrderData.get(0).getRespondToOrder();
+        respondToOrder.setDocumentLink(generateCaseDocument(RESPOND_TO_ORDER_SOLICITOR_JSON));
         data.put(RESPOND_TO_ORDER_DOCUMENTS, respondToOrderData);
         caseDetails.setData(data);
         callbackRequest.setCaseDetails(caseDetails);
@@ -158,7 +189,7 @@ public class DocumentValidationTests extends IntegrationTestBase {
         List<AmendedConsentOrderData> amendedConsentOrders = convertToAmendedConsentOrderDataList(object);
         int length = amendedConsentOrders.size();
         AmendedConsentOrder amendedConsentOrderData = amendedConsentOrders.get(length - 1).getConsentOrder();
-        amendedConsentOrderData.setAmendedConsentOrder(generateCaseDocument());
+        amendedConsentOrderData.setAmendedConsentOrder(generateCaseDocument(CONSENT_ORDER_JSON));
         data.put(AMENDED_CONSENT_ORDER_COLLECTION, amendedConsentOrders);
         caseDetails.setData(data);
         callbackRequest.setCaseDetails(caseDetails);
@@ -167,9 +198,5 @@ public class DocumentValidationTests extends IntegrationTestBase {
     private List<AmendedConsentOrderData> convertToAmendedConsentOrderDataList(Object object) {
         return objectMapper.convertValue(object, new TypeReference<>() {
         });
-    }
-
-    private static void verifyResponseHavingNullErrors(Response response) {
-        assertNull(response.jsonPath().get("errors"));
     }
 }
